# aws-cloudwatch-alarm-notifier

./: .dockerignore  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile.alarm_notifier  README.md  aws-config-dev.json  aws-config-prod.json  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml  sentry-ingest-ips.json  slack-api-ips.json
alarm_notifier/: lambda_handler.py
cdk/: app.py  aws_config.py  dev.py  prod.py
cdk/constructs/: alarm_notification_function_security_group_factory.py  app_construct.py
cdk/stacks/: application_stack.py  build_pipeline_stack.py  prod_stack.py
cdk/stages/: dev_stage.py  prod_stage.py
