[tool.poetry]
name = "aws-alarm-notifier"
version = "0.2.8"
description = "Sends notifications of AWS CloudFront alarm state changes to TBG Slack channels"
authors = ["Justin Hendrickson <justin.hendrickson@thebernardgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.117.0"
tbg-cdk-python = "^8.0.0"
tbg-cdk-nag = "^7.0.3"


[[tool.poetry.source]]
name = "tbg"
url = "https://tbg-538493872512.d.codeartifact.us-east-1.amazonaws.com/pypi/python/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
commitizen = "^3.13.0"
boto3 = "^1.34.11"


[tool.poetry.group.handler.dependencies]
aws-lambda-powertools = {extras = ["tracer"], version = "^2.30.2"}
pynamodb = "^5.5.1"
requests = "^2.31.0"
sentry-sdk = "^1.39.1"
slack-sdk = "^3.26.1"
pydantic = "^2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
